force-app/main/default/objects/Trigger_Handler_Assignment__mdt/Trigger_Handler_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata Type is used to assign handler(s) to a trigger in order to dynamically create an instance of a corresponding handler</description>
    <label>Trigger Handler Assignment</label>
    <pluralLabel>Trigger Handler Assignments</pluralLabel>
</CustomObject>