force-app/main/default/objects/Trigger_Handler_Assignment__mdt/fields/Handler_Execution__c.field-meta.xml
<CustomField>
    <fullName>Handler_Execution__c</fullName>
    <label>Handler Execution</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync</fullName>
            </value>
            <value>
                <fullName>Async After SObject Sync Update</fullName>
            </value>
            <value>
                <fullName>Async After Sync Execution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>