force-app/main/default/objects/Trigger_Handler_Assignment__mdt/fields/HandlerName__c.field-meta.xml
<CustomField>
    <fullName>HandlerName__c</fullName>
    <description>Specifies which handler corresponds to the object that is stored in the &#39;Object API Name&#39; field</description>
    <label>Handler Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>