force-app/main/default/objects/Trigger_Handler_Assignment__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if the association of the trigger and the handler is active, in order to omit or not the handler in the trigger definition</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>