force-app/main/default/objects/Trigger_Handler_Assignment__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Identifier that specifies the object with which the handlers are assigned. It should apply to the object API Name</description>
    <label>Object API Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>